Incorporado y creado URL corto
Closes #1

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>Test con reveal.js</title>
+	<title>Lo estamos haciendo mal</title>
 
 	<link rel="stylesheet" href="css/kube.min.css" />
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="css/theme/black.css">
-
-
   
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -34,8 +32,14 @@
 </head>
 
 <body>
-	<div class="reveal">
-		<div class="slides">
+  <div class="reveal">
+    <div class="slides">
+
+      <section>
+	<h1><code><a href='http://jenui01.herokuapp.com'>sl.ugr.es/lehmal</a></code></h1>
+
+	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección</aside>
+      </section>
 
 			<section>
 				<div class="poll" data-poll-name="asignatura"></div>
