Borrando código innecesario

--- a/public/index.html
+++ b/public/index.html
@@ -70,20 +70,20 @@
 			history: true,
 
 			// More info https://github.com/hakimel/reveal.js#dependencies
-			dependencies: [{
-				src: 'plugin/markdown/marked.js'
-			}, {
-				src: 'plugin/markdown/markdown.js'
-			}, {
-				src: 'plugin/notes/notes.js',
-				async: true
-			}, {
-				src: 'plugin/highlight/highlight.js',
-				async: true,
-				callback: function() {
-					hljs.initHighlightingOnLoad();
-				}
-			}]
+			dependencies: [
+			  // Zoom in and out with Alt+click
+			  { src: 'plugin/zoom-js/zoom.js', async: true }, 
+			  {
+			    src: 'plugin/notes/notes.js',
+			    async: true
+			  }, 
+			  {
+			    src: 'plugin/highlight/highlight.js',
+			    async: true,
+			    callback: function() {
+			      hljs.initHighlightingOnLoad();
+			    }
+			  }]
 		});
 
 		// Código para presentar gráficos
