Añade primeras diapos

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
 	<link rel="stylesheet" href="css/kube.min.css" />
 	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/extra.css">
+
 	<link rel="stylesheet" href="css/theme/moon.css">
   
 	<!-- Theme used for syntax highlighting of code -->
@@ -41,6 +43,10 @@
 	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección</aside>
       </section>
 
+      <section data-background='https://farm9.staticflickr.com/8052/8397485048_ae7d2b4e14_k_d.jpg' alt='you say what?'>
+	<h1 class='bkg'>Quizás no lo hacemos <em>tan</em> mal</h1>
+      </section>
+
 			<section>
 				<div class="poll" data-poll-name="asignatura"></div>
 			</section>
@@ -56,6 +62,12 @@
 			<section>
 				<canvas id="TFG_chart"></canvas>
 			</section>
+
+			<section>
+			  <h2>Créditos</h2>
+			  <ul><li><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
+
+			  </ul>
 
 		</div>
 	</div>
