Cambiando la apariencia

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,13 @@
 	<h1 class='bkg'>Quizás no lo hacemos <em>tan</em> mal</h1>
       </section>
 
-			<section>
-				<div class="poll" data-poll-name="asignatura"></div>
-			</section>
+      <section data-background='https://farm7.staticflickr.com/6200/6080736879_4cfa80b26c_b_d.jpg' alt='facepalm'>
+	<h1 class='bkg'>Pero...</h1>
+      </section>
+
+	<section>
+	  <div class="poll" data-poll-name="asignatura"></div>
+	</section>
 
 			<section>
 				<div class="poll" data-poll-name="TFG"></div>
@@ -65,7 +69,9 @@
 
 			<section>
 			  <h2>Créditos</h2>
-			  <ul><li><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
+			  <ul><li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
+
+			    <li class='credits'><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
 
 			  </ul>
 
