Añade imagen con tasas rendimiento

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,14 @@
 
       <section>
 	<div class="poll" data-poll-name="asignatura"></div>
+
+	<aside class='notes'>En unas jornadas de docencia en nuestra
+	  universidad era unánime entre los profesores de primero esa
+	  queja. El problema era que también era unánime entre los de
+	  segundo y los de tercero. Si vienen mal preparados a primero, no
+	  es culpa nuestra. Será de la LOMCE, la LOAPA, Bolonia, Wert o
+	  Mourinho. Pero si llegan mal preparados a segundo, puede que sí
+	  sea culpa nuestra.</aside>
       </section>
 
       
@@ -60,10 +68,10 @@
 	<div class="poll" data-poll-name="TFG"></div>
       </section>
 
-			<section id='asignatura_slide'>
-				<canvas id="asignatura_chart"></canvas>
-			</section>
-
+      <section id='asignatura_slide'>
+	<canvas id="asignatura_chart"></canvas>
+      </section>
+      
 			<section id='TFG_slide'>
 				<canvas id="TFG_chart"></canvas>
 			</section>
