--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
     <div class="slides">
 
       <section>
-	<h1><code><a href='http://jenui01.herokuapp.com'>sl.ugr.es/lehmal</a></code></h1>
+	<h1><code><a
+	href='http://jenui01.herokuapp.com'>sl.ugr.es/lehmal</a></code></h1>
+	<h2><code>@jjmerelo</code>, <code>#jjenui</code>
 
 	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección</aside>
       </section>
