Tuneando la transición

--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,12 @@ alt='Es tu culpa'>
 	  <h1 class='bkg'>Es culpa nuestra</h1>
 	</section>
 
+	<section
+	  data-background='https://farm3.staticflickr.com/2865/9518221385_1f99d6c41f_h_d.jpg'
+	  alt='tú, campeón'>
+	  <h1 class='bkg'>¿Es culpa nuestra?</h1>
+	</section>
+
 	<section id='TFG_slide'>
 	  <canvas id="TFG_chart"></canvas>
 	</section>
@@ -143,7 +149,10 @@ alt='Es tu culpa'>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </section>
 
-			<section>
+      
+
+      <!-- créditos -->
+      <section>
 			  <h2>Créditos</h2>
 			  <ul>
 			    <li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
@@ -153,6 +162,10 @@ alt='Es tu culpa'>
 			    href='https://www.flickr.com/photos/jake_miller/1507555279/'>Acusando
 			    de Jake Miller</a></li>
 			    
+			     <li class='credits'><a
+			    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
+			    de Sven-Kåre Evenseth
+			     </a></li>
 			  </ul>
 
 		</div>
