Errores por ahí

--- a/public/index.html
+++ b/public/index.html
@@ -149,11 +149,45 @@ alt='Es tu culpa'>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </section>
 
-      
+
+      <!-- Primeros principios -->
+      <section>
+	<section><h1>¿Qué es la informática?</h1>
+	</section>
+
+	<section><h3>Una ingeniería</h3>
+	  <h2 class='fragment'>Ciencia de los procesos</h2>
+	  <h2 class='fragment'>Creación de sistemas basados en
+	  código</h2>
+	  <h3 class='fragment'>Todo lo de arriba</h3>
+	  <h3 class='fragment'>Nada de lo de arriba</h3>
+	</section>
+
+	<section><h1>Algoritmos + estructuras de datos = programas</h1></section>
+
+	<section><h2>Errores en la metodología</h2>
+	  <h1 class='fragment'>+</h1>
+	  <h2 class='fragment'>Errores en el contenido</h2>
+	</section>
+
+      </section>
+
+      <!-- metodología -->
+      <section>
+	<section><h1>Énfasis en una sola herramienta</h1></section>
+	<section><h1>Poca integración entre asignaturas</h1></section>
+	<section><h1>Poca transversalidad</h1></section>
+	<section><h1>Poca adaptabilidad</h1></section>
+	<section><h1>Uso de software privativo</h1></section>
+	<section
+	  data-background='https://farm4.staticflickr.com/3067/2679219873_a19a7bc892_b_d.jpg'
+	  alt='dormidos'><h1 class='bkg'>Abuso de la clase magistral</h1>
+	</section>
+      </section>
 
       <!-- créditos -->
       <section>
-			  <h2>Créditos</h2>
+	<h2>Créditos</h2>
 			  <ul>
 			    <li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
 			    
@@ -166,6 +200,10 @@ alt='Es tu culpa'>
 			    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
 			    de Sven-Kåre Evenseth
 			     </a></li>
+
+			      <li class='credits'><a
+			    href='https://www.flickr.com/photos/udt007us/2679219873/'>Dormido
+			    de Christopher Roever			     </a></li>
 			  </ul>
 
 		</div>
