Preparando apra macros

--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,9 @@
 	  <canvas id="asignatura_chart"></canvas>
 	</section>
 
+	<section>
+	  <h1>Impedancia con el mercado de trabajo</h1>
+	</section>
 
       </section>
 
@@ -174,7 +177,14 @@ alt='Es tu culpa'>
 
       <!-- metodología -->
       <section>
-	<section><h1>Énfasis en una sola herramienta</h1></section>
+	<section
+      data-background='https://farm4.staticflickr.com/3239/2684866017_bb65ae0825_b_d.jpg'
+      alt='atrapado en ámbar'><h1>Énfasis en una sola herramienta</h1>
+	  <aside class='notes'>En un momento determinado, alguien dijo
+      "Vamos a buscar la mejor herramienta (que se usa o no en las
+      empresas) para este tema determinado". Y ese momento se congeló,
+      en el tiempo.
+	</section>
 	<section><h1>Poca integración entre asignaturas</h1></section>
 	<section><h1>Poca transversalidad</h1></section>
 	<section><h1>Poca adaptabilidad</h1></section>
