Hechas algunas macros
Que me van a hacer la vida un poco más fácil, aunque aquí no se vea

--- a/public/index.html
+++ b/public/index.html
@@ -193,31 +193,44 @@ alt='Es tu culpa'>
 	  data-background='https://farm4.staticflickr.com/3067/2679219873_a19a7bc892_b_d.jpg'
 	  alt='dormidos'><h1 class='bkg'>Abuso de la clase magistral</h1>
 	</section>
+
+	
+      </section>
+
+      <section data-background='https://farm5.staticflickr.com/4101/4906280283_e2d2876ddc_b_d.jpg'>
+	<h1 class='bkg'>No se vayan todavía</h1>
       </section>
 
       <!-- créditos -->
       <section>
 	<h2>Créditos</h2>
-			  <ul>
-			    <li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
-			    
-			    <li class='credits'><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
-			    <li class='credits'><a
-			    href='https://www.flickr.com/photos/jake_miller/1507555279/'>Acusando
-			    de Jake Miller</a></li>
-			    
-			     <li class='credits'><a
-			    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
-			    de Sven-Kåre Evenseth
-			     </a></li>
-
-			      <li class='credits'><a
-			    href='https://www.flickr.com/photos/udt007us/2679219873/'>Dormido
-			    de Christopher Roever			     </a></li>
-			  </ul>
-
-		</div>
-	</div>
+	<ul>
+	  <li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
+	  
+	  <li class='credits'><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
+	  <li class='credits'><a
+	    href='https://www.flickr.com/photos/jake_miller/1507555279/'>Acusando
+	    de Jake Miller</a></li>
+	  
+	  <li class='credits'><a
+	    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
+	    de Sven-Kåre Evenseth
+	  </a></li>
+	  
+	  <li class='credits'><a href='https://www.flickr.com/photos/19706444@N00/2684866017/'>Ámbar de Orthoboric</a></li>
+	  <li class='credits'><a
+	    href='https://www.flickr.com/photos/udt007us/2679219873/'>Dormido
+	    de Christopher Roever			     </a></li>
+	  
+	  <li class='credits'><a
+	    href='https://www.flickr.com/photos/multitudegolatra/4906280283/'>Matías
+	    Calderón</a></li>
+	  
+	  
+	</ul>
+	
+    </div>
+  </div>
 
 	<script src="lib/js/head.min.js"></script>
 	<script src="js/reveal.js"></script>
