--- a/public/index.html
+++ b/public/index.html
@@ -175,30 +175,96 @@ alt='Es tu culpa'>
 
       </section>
 
+
+      </section>
+
       <!-- metodología -->
       <section>
 	<section
-      data-background='https://farm4.staticflickr.com/3239/2684866017_bb65ae0825_b_d.jpg'
-      alt='atrapado en ámbar'><h1>Énfasis en una sola herramienta</h1>
+	  data-background='https://farm4.staticflickr.com/3239/2684866017_bb65ae0825_b_d.jpg'
+	  alt='atrapado en ámbar'><h1>Énfasis en una sola herramienta</h1>
 	  <aside class='notes'>En un momento determinado, alguien dijo
-      "Vamos a buscar la mejor herramienta (que se usa o no en las
-      empresas) para este tema determinado". Y ese momento se congeló,
-      en el tiempo.
+	    "Vamos a buscar la mejor herramienta (que se usa o no en las
+	    empresas) para este tema determinado". Y ese momento se congeló,
+	    en el tiempo. A veces, esa herramienta también está obsoleta.</aside>
 	</section>
-	<section><h1>Poca integración entre asignaturas</h1></section>
-	<section><h1>Poca transversalidad</h1></section>
-	<section><h1>Poca adaptabilidad</h1></section>
+
 	<section><h1>Uso de software privativo</h1></section>
+
 	<section
 	  data-background='https://farm4.staticflickr.com/3067/2679219873_a19a7bc892_b_d.jpg'
 	  alt='dormidos'><h1 class='bkg'>Abuso de la clase magistral</h1>
 	</section>
 
-	
+	<section data-background=''>
+	  <h1>Separación artificial entre teoría y práctica</h1>
+	</section>
+
       </section>
 
+
+      <!-- Contenidos -->
+      <section>
+
+	<section data-background=''>
+	  <h1>Enfoque "Dora la exploradora"</h1>
+	</section>
+
+	<section data-background=''>
+	  <h1>Niveles de abstracción inadecuados</h1>
+	  
+	  <aside class='notes'>He de confesar que no son informático,
+	    sino físico teórico. Y como tal, no me hablaron de relatividad
+	    hasta 4º y de teoría cuántica de campos hasta 5º. Dependiendo
+	    de lo que vayas a hacer con tu vida y tu empleo, puedes ser un
+	    físico perfectamente válido sin necesidad de entender los
+	    diagramas de Feynman. De la misma forma, puedes ser un
+	    excelente ingeniero del software sin tener ni idea de
+	    programación ni de escribir un compilador</aside>
+	</section>
+
+	<section><h1>Poca integración entre asignaturas</h1></section>
+	<section><h1>Poca transversalidad</h1></section>
+	<section><h1>Poca adaptabilidad</h1></section>
+
+	<section data-background=''>
+	  <h1>Énfasis en la sintaxis</h1>
+	</section>
+
+      </section>
+
+      <!-- Transición -->
       <section data-background='https://farm5.staticflickr.com/4101/4906280283_e2d2876ddc_b_d.jpg'>
 	<h1 class='bkg'>No se vayan todavía</h1>
+      </section>
+
+      <!-- Propuestas de cambio -->
+      <section>
+	<section data-background=''>
+	  <h1>Aprender haciendo</h1>
+
+	  <aside class='notes'>Si bien es cierto que hacen falta una
+	serie de conocimientos para programar, también lo es que la
+	mejor forma de aprender a programar es programar. Las célebres
+	10000 horas que son necesarias, según Malcolm Gladwell, para
+	aprender algo, se reducen a unos pocos miles en la carrera. Y
+	de esos pocos miles, aún menos se dedican a programar. La
+	informática es la creación de sistemas basados en código. Todo
+	    lo demás, sobra</aside>
+	</section>
+
+	<section data-background=''>
+	  <h1>Enseñar ayudando</h1>
+	</section>
+
+	<section data-background=''>
+	  <h1>Cambiar adaptándote</h1>
+	</section>
+
+	<section data-background=''>
+	  <h1>Evaluar aprendiendo</h1>
+	</section>
+
       </section>
 
       <!-- créditos -->
