--- a/public/index.html
+++ b/public/index.html
@@ -267,6 +267,10 @@ alt='Es tu culpa'>
 
       </section>
 
+      <section>
+	<h1>Vamos a hacerlo mejor</h1>
+      </section>
+
       <!-- créditos -->
       <section>
 	<h2>Créditos</h2>
