Prácticamente ventilado el grueso del contenido

--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,23 @@ alt='Es tu culpa'>
 
 	<section data-background=''>
 	  <h1>Enfoque "Dora la exploradora"</h1>
+
+	  <aside class='notes'>Argumento "esto a mi ha servido una vez
+	    después de 20 años de acabar la carrera" o "no sé quién que
+	trabaja en una empresa en Mondoñedo dijo que los sistemas
+	    digitales de segundo le resultaron muy útiles". Que,
+	    curiosamente, convive con "Esto no lo tenemos por qué usar
+	    porque lo requieran las empresas". Las empresas son las
+	    que van a contratar a los ingenieros. Habrá que hacerles
+	    algún caso</aside>
+	</section>
+
+	<section data-background=''>
+	  <h1>Asignaturas como silos</h1>
+	</section>
+
+	<section data-background=''>
+	  <h1>Solapamiento de objetivos y contenidos</h1>
 	</section>
 
 	<section data-background=''>
