--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,16 @@ alt='Es tu culpa'>
 	    programación ni de escribir un compilador</aside>
 	</section>
 
-	<section><h1>Poca integración entre asignaturas</h1></section>
+	<section>
+	  <h1>Poca integración entre asignaturas</h1>
+	</section>
+	
+	<section>
+	  <h2>Poca libertad creativa para el alumno</h2>
+	  <h1 class='fragment'>⇒</h1>
+	  <h2>Plagio rampante</h2>
+	</section>
+
 	<section><h1>Poca transversalidad</h1></section>
 	<section><h1>Poca adaptabilidad</h1></section>
 
@@ -285,7 +294,27 @@ alt='Es tu culpa'>
       </section>
 
       <section>
-	<h1>Vamos a hacerlo mejor</h1>
+	<section>
+	  <iframe src="//giphy.com/embed/bEDvILU8by4bC?html5=true"
+	width="480" height="359" frameBorder="0" class="giphy-embed"
+	allowFullScreen></iframe><p><a
+	href="http://giphy.com/gifs/1980s-total-eclipse-of-the-heart-bonnie-tyler-bEDvILU8by4bC">via
+	GIPHY</a></p>
+	</section>
+
+	<section><a title="By Redlands597198 (Own work) [CC BY-SA 3.0
+	(http://creativecommons.org/licenses/by-sa/3.0) or GFDL
+	(http://www.gnu.org/copyleft/fdl.html)], via Wikimedia
+	Commons"
+	href="https://commons.wikimedia.org/wiki/File%3AFriends_building.jpg"><img
+	width="256" alt="Friends building"
+	src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Friends_building.jpg/256px-Friends_building.jpg"/></a>
+	</section>
+
+	<section>
+	  <h1>Vamos a hacerlo mejor</h1>
+	</section>
+
       </section>
 
       <!-- créditos -->
