Añade silos míos

--- a/public/index.html
+++ b/public/index.html
@@ -206,8 +206,8 @@ alt='Es tu culpa'>
       <!-- Contenidos -->
       <section>
 
-	<section data-background=''>
-	  <h1>Enfoque "Dora la exploradora"</h1>
+	<section data-background='https://farm6.staticflickr.com/5056/5492944433_65c35a71bd_b_d.jpg'>
+	  <h1 class='bkg'>Enfoque Mochila de Dora</h1>
 
 	  <aside class='notes'>Argumento "esto a mi ha servido una vez
 	    después de 20 años de acabar la carrera" o "no sé quién que
@@ -216,18 +216,27 @@ alt='Es tu culpa'>
 	    curiosamente, convive con "Esto no lo tenemos por qué usar
 	    porque lo requieran las empresas". Las empresas son las
 	    que van a contratar a los ingenieros. Habrá que hacerles
-	    algún caso</aside>
+	    algún caso. La mochila dice <a
+	    href='http://dora.wikia.com/wiki/Backpack'>Anything you
+	    might need, I've got inside for you</a></aside>
 	</section>
 
-	<section data-background=''>
+	<section>
+
+	<section data-background='img/silos.jpg'>
 	  <h1>Asignaturas como silos</h1>
+	  <h1 class='fragment'>⇒</h1>
+	  <h1 class='fragment'>Solapamiento de objetivos y
+	  contenidos</h1>
+
+	  <aside class='notes'>También poca integración entre
+	asignaturas. No hay trabajos que se sigan de una a la otra, no
+	    se traspasan los muros de los departamentos</aside>
 	</section>
 
-	<section data-background=''>
-	  <h1>Solapamiento de objetivos y contenidos</h1>
-	</section>
-
-	<section data-background=''>
+	<section
+	  data-background='https://farm2.staticflickr.com/1139/1464768432_8ff35889c7_b_d.jpg'
+	  alt='capas'>
 	  <h1>Niveles de abstracción inadecuados</h1>
 	  
 	  <aside class='notes'>He de confesar que no son informático,
@@ -240,9 +249,7 @@ alt='Es tu culpa'>
 	    programación ni de escribir un compilador</aside>
 	</section>
 
-	<section>
-	  <h1>Poca integración entre asignaturas</h1>
-	</section>
+
 	
 	<section>
 	  <h2>Poca libertad creativa para el alumno</h2>
@@ -330,14 +337,24 @@ alt='Es tu culpa'>
 	  
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
-	    de Sven-Kåre Evenseth
-	  </a></li>
+	    de Sven-Kåre Evenseth	  </a></li>
 	  
-	  <li class='credits'><a href='https://www.flickr.com/photos/19706444@N00/2684866017/'>Ámbar de Orthoboric</a></li>
+	  <li class='credits'><a href='https://www.flickr.com/photos/lorenjavier/5492944433/'>Dora por Loren Javier</a></li>
+
+
+	  <li class='credits'><a
+	  href='https://www.flickr.com/photos/19706444@N00/2684866017/'>Ámbar
+	  de Orthoboric</a></li>
+
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/udt007us/2679219873/'>Dormido
 	    de Christopher Roever			     </a></li>
 	  
+	  <li class='credits'><a
+	    href='https://www.flickr.com/photos/nigelappleton/1464768432/'>Muro
+	      de Nigel Appleton</a></li>
+
+
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/multitudegolatra/4906280283/'>Matías
 	    Calderón</a></li>
