Añade zapatos falsos

--- a/public/index.html
+++ b/public/index.html
@@ -218,15 +218,21 @@ alt='Es tu culpa'>
 	    que van a contratar a los ingenieros. Habrá que hacerles
 	    algún caso. La mochila dice <a
 	    href='http://dora.wikia.com/wiki/Backpack'>Anything you
-	    might need, I've got inside for you</a></aside>
+	    might need, I've got inside for you</a>. Además, las
+	    asignaturas son totalmente impermeables, vistas desde
+	    fuera. Los apuntes, imposibles de conseguir si no estás
+	    matriculado. Si los consigues, tampoco son libres: no
+	    puedes "trabajar" con ellos, modificarlos,
+	    actualizarlos. La universidad es el lugar del conocimiento
+	    universal. Meterlo en silos no ayuda a nadie, y menos a
+	    quien está dentro del silo.</aside>
 	</section>
 
-	<section>
 
 	<section data-background='img/silos.jpg'>
-	  <h1>Asignaturas como silos</h1>
-	  <h1 class='fragment'>⇒</h1>
-	  <h1 class='fragment'>Solapamiento de objetivos y
+	  <h1 class='bkg'>Asignaturas como silos</h1>
+	  <h1 class='fragment bkg'>⇒</h1>
+	  <h1 class='fragment bkg'>Solapamiento de objetivos y
 	  contenidos</h1>
 
 	  <aside class='notes'>También poca integración entre
@@ -237,7 +243,7 @@ alt='Es tu culpa'>
 	<section
 	  data-background='https://farm2.staticflickr.com/1139/1464768432_8ff35889c7_b_d.jpg'
 	  alt='capas'>
-	  <h1>Niveles de abstracción inadecuados</h1>
+	  <h1 class='bkg'>Niveles de abstracción inadecuados</h1>
 	  
 	  <aside class='notes'>He de confesar que no son informático,
 	    sino físico teórico. Y como tal, no me hablaron de relatividad
@@ -251,10 +257,17 @@ alt='Es tu culpa'>
 
 
 	
-	<section>
-	  <h2>Poca libertad creativa para el alumno</h2>
-	  <h1 class='fragment'>⇒</h1>
-	  <h2>Plagio rampante</h2>
+	<section
+	  data-background='https://farm1.staticflickr.com/51/147256012_b4b5176689_b_d.jpg'
+	  alt='Mike y Punas'>
+	  <h2 class='bkg'>Poca libertad creativa para el alumno</h2>
+	  <h1 class='fragment bkg'>⇒</h1>
+	  <h2 class='fragment bkg'>Plagio rampante</h2>
+
+	  <aside class='notes'>Como a Rachel, que todo el mundo le
+	    decía que tenía que ser un zapato. ¡Y ella quería ser un
+	    bolso!</aside>
+
 	</section>
 
 	<section><h1>Poca transversalidad</h1></section>
@@ -353,6 +366,10 @@ alt='Es tu culpa'>
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/nigelappleton/1464768432/'>Muro
 	      de Nigel Appleton</a></li>
+
+	  <li class='credits'><a
+	  href='https://www.flickr.com/photos/jeremy_vandel/147256012/'>Zapatos
+	  falsos por Jeremy Vandel</a></li>
 
 
 	  <li class='credits'><a
