Añade más argumentos

--- a/public/index.html
+++ b/public/index.html
@@ -186,10 +186,30 @@ alt='Es tu culpa'>
 	  <aside class='notes'>En un momento determinado, alguien dijo
 	    "Vamos a buscar la mejor herramienta (que se usa o no en las
 	    empresas) para este tema determinado". Y ese momento se congeló,
-	    en el tiempo. A veces, esa herramienta también está obsoleta.</aside>
+	    en el tiempo. A veces, esa herramienta también está
+      obsoleta. El problema, además, es qeu esa herramienta varía de
+      una asignatura a otra y sin ningún criterio, con lo que esas
+      10000 horas que se necesitan para ser excelente en ella se
+      acaban yendo al carajo. </aside>
 	</section>
 
-	<section><h1>Uso de software privativo</h1></section>
+	<section
+	  data-background='https://farm5.staticflickr.com/4018/4482536500_f7e4a0723b_b_d.jpg'>
+	  <h1>Uso de software privativo</h1>
+
+	  <aside class='notes'>De hecho, hasta el año pasado había un
+	programa privativo, para MSDOS, que se usaba en una asignatura
+	en la ETSIIT. Por no mencionar ESE programa que no voy a
+	mencionar. Un profesor universiario debe saber que las
+	herramientas para aprencer un concepto no tienen por qué ser
+	necesariamente las herramientas que se usen más tarde. ¿Quién
+	aprendió programación con el Basic? ¿O con el Pascal? Siendo
+	que es así, ¿por qué obligar a la universidad a pagar
+	licencias y al alumno a hacer cosas ilegales como piratear un
+	programa para usarlo? ¿O enseñarle sólo uno que no va a poder
+	usar si se monta por su cuenta o trabaja en una empresa
+	    pequeña? </aside>
+	</section>
 
 	<section
 	  data-background='https://farm4.staticflickr.com/3067/2679219873_a19a7bc892_b_d.jpg'
@@ -374,9 +394,11 @@ alt='Es tu culpa'>
 
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/multitudegolatra/4906280283/'>Matías
-	    Calderón</a></li>
+	    Calderón señalando con el dedo</a></li>
 	  
-	  
+	  <li class='credits'><a href='https://www.flickr.com/photos/29158681@N00/4482536500/'>Caja de MSDOS por mrdorkesq </a></li>
+
+
 	</ul>
 	
     </div>
