Añade cosas sobre el trabajo

--- a/public/index.html
+++ b/public/index.html
@@ -120,8 +120,20 @@
 	  <canvas id="asignatura_chart"></canvas>
 	</section>
 
-	<section>
-	  <h1>Impedancia con el mercado de trabajo</h1>
+	<section
+	  data-background='https://farm9.staticflickr.com/8004/7515248418_93de6abd35_h_d.jpg'
+	  alt='apple2e'>
+	  <h1 class='bkg'>Impedancia con el mercado de trabajo</h1>
+
+	  <aside class='notes'>En ocasiones están obsoletos o
+	simplemente no listos para la mayoría de los puestos de
+	trabajo que se ofrecen, pudiendo acceder sólo a puestos de
+	programador de bajo nivel, ni analista siquiera. Además en un
+	ambiente de competencia creciente: Coursera, Khan Academy, y,
+	quizás, <a
+	href='http://www.lavanguardia.com/tecnologia/20160703/402899689142/universidad-facebook-no-ensenan-trabajo.html'>la
+	    Universidad Facebook</a></aside>
+
 	</section>
 
       </section>
@@ -182,7 +194,7 @@ alt='Es tu culpa'>
       <section>
 	<section
 	  data-background='https://farm4.staticflickr.com/3239/2684866017_bb65ae0825_b_d.jpg'
-	  alt='atrapado en ámbar'><h1>Énfasis en una sola herramienta</h1>
+	  alt='atrapado en ámbar'><h1 class='bkg'>Énfasis en una sola herramienta</h1>
 	  <aside class='notes'>En un momento determinado, alguien dijo
 	    "Vamos a buscar la mejor herramienta (que se usa o no en las
 	    empresas) para este tema determinado". Y ese momento se congeló,
@@ -195,7 +207,7 @@ alt='Es tu culpa'>
 
 	<section
 	  data-background='https://farm5.staticflickr.com/4018/4482536500_f7e4a0723b_b_d.jpg'>
-	  <h1>Uso de software privativo</h1>
+	  <h1 class='bkg'>Uso de software privativo</h1>
 
 	  <aside class='notes'>De hecho, hasta el año pasado había un
 	programa privativo, para MSDOS, que se usaba en una asignatura
@@ -238,14 +250,24 @@ alt='Es tu culpa'>
 	    que van a contratar a los ingenieros. Habrá que hacerles
 	    algún caso. La mochila dice <a
 	    href='http://dora.wikia.com/wiki/Backpack'>Anything you
-	    might need, I've got inside for you</a>. Además, las
-	    asignaturas son totalmente impermeables, vistas desde
-	    fuera. Los apuntes, imposibles de conseguir si no estás
-	    matriculado. Si los consigues, tampoco son libres: no
-	    puedes "trabajar" con ellos, modificarlos,
-	    actualizarlos. La universidad es el lugar del conocimiento
-	    universal. Meterlo en silos no ayuda a nadie, y menos a
-	    quien está dentro del silo.</aside>
+	    might need, I've got inside for you</a>.</aside>
+	</section>
+
+	<section
+	  data-background='https://farm2.staticflickr.com/1139/1464768432_8ff35889c7_b_d.jpg'
+	  alt='capas'>
+	  <h1 class='bkg'>Niveles de abstracción inadecuados</h1>
+	  
+	  <aside class='notes'>Esto es consecuencia de lo
+	    anterior. Como se explica <em>todo</em>, vamos del nivel
+	    más alto hasta el más bajo. He de confesar que no son informático,
+	    sino físico teórico. Y como tal, no me hablaron de relatividad
+	    hasta 4º y de teoría cuántica de campos hasta 5º. Dependiendo
+	    de lo que vayas a hacer con tu vida y tu empleo, puedes ser un
+	    físico perfectamente válido sin necesidad de entender los
+	    diagramas de Feynman. De la misma forma, puedes ser un
+	    excelente ingeniero del software sin tener ni idea de
+	    programación ni de escribir un compilador</aside>
 	</section>
 
 
@@ -257,23 +279,16 @@ alt='Es tu culpa'>
 
 	  <aside class='notes'>También poca integración entre
 	asignaturas. No hay trabajos que se sigan de una a la otra, no
-	    se traspasan los muros de los departamentos</aside>
+	    se traspasan los muros de los departamentos. Además, las
+	    asignaturas son totalmente impermeables, vistas desde
+	    fuera. Los apuntes, imposibles de conseguir si no estás
+	    matriculado. Si los consigues, tampoco son libres: no
+	    puedes "trabajar" con ellos, modificarlos,
+	    actualizarlos. La universidad es el lugar del conocimiento
+	    universal. Meterlo en silos no ayuda a nadie, y menos a
+	    quien está dentro del silo.</aside>
 	</section>
 
-	<section
-	  data-background='https://farm2.staticflickr.com/1139/1464768432_8ff35889c7_b_d.jpg'
-	  alt='capas'>
-	  <h1 class='bkg'>Niveles de abstracción inadecuados</h1>
-	  
-	  <aside class='notes'>He de confesar que no son informático,
-	    sino físico teórico. Y como tal, no me hablaron de relatividad
-	    hasta 4º y de teoría cuántica de campos hasta 5º. Dependiendo
-	    de lo que vayas a hacer con tu vida y tu empleo, puedes ser un
-	    físico perfectamente válido sin necesidad de entender los
-	    diagramas de Feynman. De la misma forma, puedes ser un
-	    excelente ingeniero del software sin tener ni idea de
-	    programación ni de escribir un compilador</aside>
-	</section>
 
 
 	
@@ -390,6 +405,9 @@ alt='Es tu culpa'>
 	  <li class='credits'><a
 	  href='https://www.flickr.com/photos/jeremy_vandel/147256012/'>Zapatos
 	  falsos por Jeremy Vandel</a></li>
+
+
+	  <li class='credits'><a href='https://www.flickr.com/photos/jurvetson/7515248418/'>Apple de Jurvetson</a></li>
 
 
 	  <li class='credits'><a
