Cambia friends por Breaking Bad

--- a/public/index.html
+++ b/public/index.html
@@ -357,13 +357,8 @@ alt='Es tu culpa'>
 	GIPHY</a></p>
 	</section>
 
-	<section><a title="By Redlands597198 (Own work) [CC BY-SA 3.0
-	(http://creativecommons.org/licenses/by-sa/3.0) or GFDL
-	(http://www.gnu.org/copyleft/fdl.html)], via Wikimedia
-	Commons"
-	href="https://commons.wikimedia.org/wiki/File%3AFriends_building.jpg"><img
-	width="256" alt="Friends building"
-	src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Friends_building.jpg/256px-Friends_building.jpg"/></a>
+	<section data-background='https://upload.wikimedia.org/wikipedia/commons/8/8b/Breaking_Bad_season_five_part_i_and_ii_dvd.png'>
+	  <p class='bkg'><a title="By Гришин Никита (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABreaking_Bad_season_five_part_i_and_ii_dvd.png"><img width="256" alt="Breaking Bad season five part i and ii dvd" src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Breaking_Bad_season_five_part_i_and_ii_dvd.png"/></a></p>
 	</section>
 
 	<section>
