Añade sobre los mensajes de error

--- a/public/index.html
+++ b/public/index.html
@@ -90,8 +90,9 @@
 	  <h1>Pero también...</h1>
 	</section>
 
-	<section>
+	<section data-background='img/error.jpg' alt='mensaje de error'>
 	  <h1>Incapacidad para interpretar los mensajes de error</h1>
+	  <aside class='notes'>No sólo no se saben interpretar los mensajes de error. Es que ni siquiera saben usarse. En vez de capturar una pantalla o copiar/pegar el error (en StackOverflow o en Google), se hacen fotos del móvil de la misma. Es falta de una panoplia de herramientas básicas <em>horizontales</em> que no corresponden a ninguna asignatura, pero que deberían ser obligatorio desde primero. En parte es culpa del alumno por su actitud. Vale. Pero en la enseñanza hay dos partes. Y si tratas de enfocar prácticas, ejercicios y demás de forma que esa posibilidad de que haya error se minimice para que el alumno no se líe, también le quitas al alumno la posibilidad de aprender corrigiendo sus propios errores.</aside>
 	</section>
 
 	<section>
