--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 	  <aside class='notes'>No sólo no se saben interpretar los mensajes de error. Es que ni siquiera saben usarse. En vez de capturar una pantalla o copiar/pegar el error (en StackOverflow o en Google), se hacen fotos del móvil de la misma. Es falta de una panoplia de herramientas básicas <em>horizontales</em> que no corresponden a ninguna asignatura, pero que deberían ser obligatorio desde primero. En parte es culpa del alumno por su actitud. Vale. Pero en la enseñanza hay dos partes. Y si tratas de enfocar prácticas, ejercicios y demás de forma que esa posibilidad de que haya error se minimice para que el alumno no se líe, también le quitas al alumno la posibilidad de aprender corrigiendo sus propios errores.</aside>
 	</section>
 
-	<section>
+	<section data-background='https://farm5.staticflickr.com/4067/4478655355_aec3bae1cb_b_d.jpg' alt='rompiendo un ordenador'>
 	  <h1>Poca flexibilidad para usar nuevas herramientas</h1>
 	</section>
 
@@ -382,6 +382,8 @@ alt='Es tu culpa'>
 	  <li class='credits'><a
 	    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
 	    de Sven-Kåre Evenseth	  </a></li>
+
+	  <li class='credits'><a href='https://www.flickr.com/photos/jronaldlee/4478655355/'>Martillazo por James Lee</a></li>
 	  
 	  <li class='credits'><a href='https://www.flickr.com/photos/lorenjavier/5492944433/'>Dora por Loren Javier</a></li>
 
