--- a/public/index.html
+++ b/public/index.html
@@ -96,10 +96,12 @@
 	</section>
 
 	<section data-background='https://farm5.staticflickr.com/4067/4478655355_aec3bae1cb_b_d.jpg' alt='rompiendo un ordenador'>
-	  <h1>Poca flexibilidad para usar nuevas herramientas</h1>
+	  <h1>Poca flexibilidad con nuevas herramientas</h1>
+
+	  <aside class='notes'>Si se les enseña una herramienta, sólo una, sin darle la posibilidad de probar otras y elegir la propia, finalmente sólo saben usar esa herramienta, y a veces ni siquiera bien. Hay que combinar la flexibilidad con la habilidad con una herramienta, y a pesar de que hacen falta 10000 horas para dominar una herramienta, también hacen falta para la ciencia de elegir tus propias herramientas. Si no se saca al alumno de sota, caballo y rey, es todo lo que van a usar.</aside>
 	</section>
 
-	<section>
+	<section data-background='https://farm3.staticflickr.com/2032/2278772565_afca006b1b_o_d.jpg' alt='pizarra'>
 	  <h1><em>Academicismo</em></h1>
 	  <aside class='notes'>Por falta de un mejor nombre, aquí de
 	  lo que quiero hablar es de varias cosas. Como se aprenden
@@ -387,6 +389,7 @@ alt='Es tu culpa'>
 	  
 	  <li class='credits'><a href='https://www.flickr.com/photos/lorenjavier/5492944433/'>Dora por Loren Javier</a></li>
 
+	  <li><a href='https://www.flickr.com/photos/mateipetrutbogdan/2278772565/'>Pizarra de Matei Petrut-Bogdan</a></li>
 
 	  <li class='credits'><a
 	  href='https://www.flickr.com/photos/19706444@N00/2684866017/'>Ámbar
